| Bug #6379 | ENUM values are incorrectly converted | ||
|---|---|---|---|
| Submitted: | 2 Nov 2004 5:22 | Modified: | 2 Dec 2004 8:54 |
| Reporter: | Alexander Barkov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.x | OS: | Any (any) |
| Assigned to: | Alexander Barkov | CPU Architecture: | Any |
[2 Dec 2004 8:54]
Alexander Barkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
fixed in 4.1.8

Description: ENUM values are incorrectly converted when the column character set differ from SET NAMES. How to repeat: mysql> set names latin1; Query OK, 0 rows affected (0.00 sec) mysql> create table t1 (a enum('й','ц','у') character set utf8 default 'й'); Query OK, 0 rows affected (0.01 sec) mysql> show create table t1; CREATE TABLE `t1` ( `a` enum('?','?','?') character set utf8 default '' ) ENGINE=MyISAM DEFAULT CHARSET=latin1 Suggested fix: The values should be converted into the column character set.