Bug #6379: ENUM values are incorrectly converted - add_field_to_list() now uses <List>String instead of TYPELIB to be able to distinguish literals 'aaa' and hex literals 0xaabbcc. - move some code from add_field_to_list() where   we don't know column charset yet, to   mysql_prepare_table(), where we do.